# nexus-multisig

./: .gitignore  Makefile  README.md  package.json  skills-lock.json  turbo.json
.claude/skills/: zk-proofs
bindings/src/: index.ts
circuits/: biome.json  index.ts  package.json
circuits/circuits/: main.circom  merkle_proof.circom  note_commitment.circom  note_nullifier.circom  spend.circom  transact.circom
circuits/circuits/lib/: schnorr_verify.circom
circuits/scripts/: compile.sh  sample.ts
circuits/src/: babyjubjub.ts  dkg.ts  frost.ts  merkle.ts  note.ts  poseidon.ts  spend-input.ts  transact-input.ts
circuits/tests/: frost.test.ts  note_commitment.test.ts  note_nullifier.test.ts  schnorr_verify.test.ts  spend.test.ts  transact.test.ts
circuits/tests/circuits/: test_note_commitment.circom  test_note_nullifier.circom  test_schnorr_verify.circom  test_spend.circom  test_transact.circom
circuits/tests/helper/: dkg.ts  frost.ts  index.ts  transact.ts
contracts/: Cargo.toml  README.md  package.json
contracts/contracts/asp-membership/: Cargo.toml
contracts/contracts/asp-membership/src/: lib.rs  test.rs
contracts/contracts/asp-non-membership/: Cargo.toml
contracts/contracts/asp-non-membership/src/: lib.rs  test.rs
contracts/contracts/circom-groth16-verifier/: Cargo.toml  build.rs
contracts/contracts/circom-groth16-verifier/src/: lib.rs  test.rs
contracts/contracts/circuit-keys/: Cargo.toml
contracts/contracts/pool/: Cargo.toml
contracts/contracts/pool/src/: error.rs  event.rs  interface.rs  lib.rs  merkle_tree.rs  pool.rs  storage.rs  types.rs
contracts/contracts/soroban-utils/: Cargo.toml
contracts/contracts/soroban-utils/src/: constants.rs  lib.rs  poseidon.rs  utils.rs
contracts/contracts/types/: Cargo.toml
contracts/deployments/local/: deployments.json
contracts/deployments/testnet/: deployments.json
contracts/scripts/: bindings.ts  deploy.ts  setup-accounts.ts  wait-account.ts
coordinator/: coordinator.db-shm  coordinator.db-wal  drizzle.config.ts  package.json  tsconfig.json
coordinator/scripts/: reset.ts
coordinator/src/: db.ts  index.ts  schema.ts
coordinator/src/routes/: dkg.ts  groups.ts  sessions.ts  sign-sessions.ts
crypto/: package.json  tsconfig.build.json  tsconfig.json
crypto/src/: constants.ts  ecies.ts  groupViewKey.ts  index.ts  merkle.ts  note.ts  poseidon.ts  schnorr.ts  shielded.ts  utils.ts  zk.ts
crypto/src/frost/: bjj.ts  dkg.ts  index.ts  serialization.ts  signature.ts
crypto/tests/: ecies.test.ts  frost.test.ts  merkle.test.ts  note.test.ts  schnorr.test.ts  sign-serialization.test.ts
ui/: .npmrc  DESIGN.md  drizzle.config.ts  next.config.ts  package.json
ui/drizzle/: 0000_initial.sql  0001_users_stellar_address.sql
ui/drizzle/meta/: _journal.json
ui/public/: snarkjs.js
ui/src/: theme.ts
ui/src/api/: account.ts  client.ts  contract.ts  coordinator.ts  price.ts  rpc.ts
ui/src/api/dkg/: createDkgSession.ts  createSession.ts  getDkgSession.ts  getRound1Data.ts  getRound2Data.ts  getSession.ts  getUserDkgSessions.ts  submitRound1.ts  submitRound2.ts
ui/src/api/groups/: createGroup.ts  getGroup.ts  getGroups.ts
ui/src/api/pool/: getCommitments.ts  getGroupNotes.ts  getPoolPublicKey.ts  getPoolState.ts  getShieldedAddress.ts  register.ts  transact.ts  useSendTransaction.ts  useTransact.ts
ui/src/api/sign-sessions/: createSignSession.ts  getSignSession.ts  getSignSessions.ts  proposeTx.ts  submitCommit.ts  submitSigShare.ts  submitSignature.ts
ui/src/api/users/: getUser.ts  registerUser.ts
ui/src/app/: emotion-registry.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/components/: brand-panel.tsx  multisig-card.tsx  session-list.tsx  wallet-panel.tsx
ui/src/components/layout/: footer.tsx  header.tsx
ui/src/components/sign-session/: ceremony-action-card.tsx  ceremony-progress-card.tsx  copy-button.tsx  detail-row.tsx  sign-session-dashboard.tsx  transaction-summary-card.tsx  tx-display.tsx
ui/src/components/ui/: stepper.tsx
ui/src/config/: constants.ts  env.ts  network.ts
ui/src/context/: wallet-context.tsx
ui/src/db/: index.ts  schema.ts
ui/src/hooks/: useGroupShieldedWallet.ts  useSignSession.ts  useVaultCreation.ts
ui/src/lib/: dkg.ts  frostKeyStore.ts  groupViewKey.ts  nonceBackup.ts  poseidon.ts  shielded.ts  tree.ts  vaultAddress.ts  zk.ts
ui/src/lib/tx/: index.ts  (+3 more)
ui/src/utils/: token.ts
(+37 files in other folders)
