[package]
name = "circom-groth16-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
contract-types = { workspace = true }
soroban-sdk = { workspace = true, features = ["alloc"] }

[build-dependencies]
ark-bn254 = { workspace = true }
circuit-keys = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-utils = { workspace = true }

[lints]
workspace = true
