[package]
name = "pool"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
contract-types = { workspace = true }
soroban-sdk = { workspace = true }
soroban-utils = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
